GearUI: fix layout display issues
- When font size are changed, size of forms with images be bigger or smaller because they has rem size.
But our css does not have style for background repeat, so images are repeated and it looks strange.
This patch add background-repeat attributes.
- In listview, when li item does not have <a> tag, this text not ellipsis.
So this patch add white-space attribute.

--- a/standalone/src/css/common/tizen.micro.layout.less
+++ b/standalone/src/css/common/tizen.micro.layout.less
@@ -105,6 +105,8 @@ body {
 
 		&.ui-icon-detail {
 			background-image: url(@icon_actionbar_more_detail_normal);
+			background-repeat: no-repeat;
+			background-size: 100%;
 			&[disabled="disabled"] {
 				.ui-more-disable;
 				background-image: url(@icon_actionbar_more_detail_disable);
@@ -113,6 +115,8 @@ body {
 
 		&.ui-icon-overflow {
 			background-image: url(@icon_actionbar_more_overflow_normal);
+			background-repeat: no-repeat;
+			background-size: 100%;
 			&[disabled="disabled"] {
 				.ui-more-disable;
 				background-image: url(@icon_actionbar_more_overflow_disable);
@@ -121,6 +125,8 @@ body {
 
 		&.ui-icon-selectall {
 			background-image: url(@icon_actionbar_more_selectall_normal);
+			background-repeat: no-repeat;
+			background-size: 100%;
 			&[disabled="disabled"] {
 				.ui-more-disable;
 				background-image: url(@icon_actionbar_more_selectall_disable);
