--- a/standalone/src/css/common/tizen.micro.listview.less
+++ b/standalone/src/css/common/tizen.micro.listview.less
@@ -11,6 +11,7 @@ Listview
 	border-bottom: 1px solid @color_listview_border;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: nowrap;
 
 	> * {
 		white-space: nowrap;
