--- a/standalone/src/css/common/tizen.micro.processing.less
+++ b/standalone/src/css/common/tizen.micro.processing.less
@@ -4,6 +4,8 @@
 }
 .ui-processing {
 	background-image: url("./images/Progress/tw_widget_popup_activity.png");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 	-webkit-animation: rotating 1s linear infinite;
 	width:80 * @unit_base;
 	height:80 * @unit_base;
