--- a/standalone/src/css/common/tizen.micro.progress.less
+++ b/standalone/src/css/common/tizen.micro.progress.less
@@ -3,9 +3,8 @@
  */
 
 @-webkit-keyframes indeterminate {
-	0% {background-image: url('./images/Progress/tw_progressbar_indeterminate1_holo_dark.png');}
-	50% {background-image: url('./images/Progress/tw_progressbar_indeterminate2_holo_dark.png');}
-	100% {background-image: url('./images/Progress/tw_progressbar_indeterminate1_holo_dark.png');}
+	from {background-image: url('./images/Progress/tw_progressbar_indeterminate1_holo_dark.png');}
+	to {background-image: url('./images/Progress/tw_progressbar_indeterminate2_holo_dark.png');}
 }
 
 progress {
@@ -35,7 +34,9 @@ progress::-webkit-progress-value {
 	overflow: hidden;
 }
 progress.ui-progress-indeterminate::-webkit-progress-value {
-	-webkit-animation: indeterminate 1s infinite;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	-webkit-animation: indeterminate 150ms infinite;
 }
 
 .ui-progress-proportion {
